<resources>
    <string name="app_name">Mid</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="enter_the_phone_number">Enter the Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
</resources>